Test with references

--- a/intro.tex
+++ b/intro.tex
@@ -1,26 +1,25 @@
 \section{Introduction}
 %\anote{start more smoothly. What is iO, how did it come about, why do we care, what is the state-of-the-art? Also, mention somewhere that a canonical form is an iO}
 %\anote{Add more background about the state-of-the art in iO: what are the current candidates, and is there a post-quantum one?}
-%\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}.}
-A program obfuscation is a probabilistic polynomial-time algorithm that can transform a circuit $C$ into another circuit $C’$ that has the same functionality as $C$ but does reveal anything about $C,$ except its functionality i.e. anything that can be learned from $C’$ about $C$ can also be learned from a black-box access to the functionality (input/output) of $C.$ This is called virtual black-box obfuscation. Unfortunately, Barak el~\cite{BGI+12}  proved that virtual black-box obfuscation is impossible in general.\footnote{They construct a family of booleans functions which is inherently unobfuscatable.} Motivated by this impossibility result Barak el~\cite{BGI+12} proposed a weaker called Indistinguishability Obfuscation $i\mathcal{O}.$ 
+%\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}.
+\anote{introduce quantum cryptography.}
+A program obfuscation is a probabilistic polynomial-time algorithm that can transform a circuit $C$ into another circuit $C’$ that has the same functionality as $C$ but does reveal nothing about $C,$ except its functionality i.e. anything that can be learned from $C’$ about $C$ can also be learned from a black-box access to the functionality (input/output) of $C.$ This is called virtual black-box obfuscation. Unfortunately, Barak el~\cite{BGI+12}  proved that virtual black-box obfuscation is impossible in general.\footnote{They construct a family of booleans functions which is inherently unobfuscatable.} Motivated by this impossibility result Barak el~\cite{BGI+12} proposed a different notion of obfuscation called Indistinguishability Obfuscation $i\mathcal{O}.$ 
 
-An, $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit $C$ as an input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs $x$ and size of $i\mathcal{O}(C)$ is at most polynomial in the size $C.$ Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable, i.e. $iO(C_1)\sim^c iO(C_2).$ The $i\mathcal{O}$ achieves the notion of best possible obfuscations, which state that any information that is not hidden by the obfuscated circuit is also not hidden by any other similar size circuit computing the same functionality ~\cite{GR14}. The indistinguishability obfuscation is a very powerful cryptographic tool which that has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc. 
+An $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit $C$ as an input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs $x$ and size of $i\mathcal{O}(C)$ is at most polynomial in the size of $C.$ Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable.
 
-The first candidate construction of $i\mathcal{O}$ was published in \cite{GGH+13}, whose security relied on the presume hardness of multilinear maps \cite{CLT13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on some multilinear maps \cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme has been proposed under the some different assumptions \cite{AJL+19}. However, It is too premature to say anything about the quantum security of this new construction \cite{AJL+19}. 
+ The $i\mathcal{O}$ achieves the notion of best possible obfuscations, which informally states that any information that is not hidden by the obfuscated circuit is also not hidden by any other same size circuit computing the same functionality ~\cite{GR14}. The indistinguishability obfuscation is a very powerful cryptographic tool and has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc. 
 
-In this work, we continue the study of computational indistinguishable obfuscation in the quantum world. The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base construction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
+The first candidate construction of $i\mathcal{O}$ was published in \cite{GGH+13}, whose security relied on the presume hardness of multilinear maps \cite{CLT13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on multilinear maps \cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme has been proposed under the some different assumptions \cite{AJL+19}. However, It is too premature to say anything about the quantum security of this new construction \cite{AJL+19}. 
 
-%In this work, we continue the study of $i\mathcal{O}$ in the quantum world. We give two main contributions, both assuming the existence of quantum-secure $q\mathcal{O}$ for classical circuits.
-%Our first contribution echoes the private-to-public key transformation of~\cite{SW14}, by showing its applicability to the encryption of \emph{quantum} messages. In this case, the security is based on (quantum-secure one-way functions?)..., and is shown according to the notion of quantum semantic security ~\cite{BJ15,ABF+16}. Our second contribution shows how to build $i\mathcal{O}$ for certain families of quantum circuits. Namely, we show two different ways in which Clifford circuits admit an $i\mathcal{O}$ scheme. The first method is based on the canonical representation of Clifford circuits~\cite{AG04,Nest10}, while the second method is based on the principle of gate teleportation~\cite{GC99}. We  extend these schemes to circuits that include layers of non-Clifford $\tgate$-gates, as long as each Clifford layer is within a family of circuits that admit the $i\mathcal{O}$ obfuscation described above, and as long as the $\tgate$-gates are in fixed positions.
-% The two above methods present different advantages: the technique using the canonical form is straightforward and in fact does not require the assumption of a quantum-secure classical $i\mathcal{O}$. By construction, the obfuscated circuits is classical, and hence can be easily communicated, stored, used and copied. In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$. By construction, the obfuscated circuits are quantum. While this presents a technological challenge to communication, storage and also usage, it could enable a new functionality related to the \emph{unclonability} of quantum states (see Open Questions below).
+In this work, we continue the study of computational indistinguishable obfuscation in the quantum world. The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base construction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states. One important aspect of our $Qi\mathcal{O}$ definition is that it does not require that obfuscated quantum circuits have to be of same size. Indeed our construction works for any equivalent quantum circuits, regardless of their relative size.
 
 %\Anne{note to Raza: when adding bib entries to quantum.bib, just add a quick entry at the bottom of quantum.bib. Then Sebastien will clean it up and send us the corrected .bib (Sébastien has a small contract as admin of the quantum.bib).}
 
 \subsection{Obfuscation in a Quantum World}
 The quantum obfuscation was first studied in \cite{AJJ14}, where a new notion called
-$(G,\Gamma)$-{\em indistinguishability obfuscation} was proposed. Where $G$ is a set of gates and $\Gamma$ is a set of relations satisfied by the elements of $G.$ In this notion any two circuits over the set of gates $G$ are perfectly indistinguishable if they differ by some sequence of applications of the relations in $\Gamma.$ One of the motivations of their work was to provide a weaker definition of perfectly indistinguishable obfuscation, which is shown to be impossible under certain complexity-theoretic assumptions \cite{AJJ14}. However, $(G,\Gamma)$-{\em indistinguishability obfuscation}  appears to be incomparable with the computational indistinguishability obfuscation \cite{BGI+12,GGH+13 }, which is the topic of this paper.
+$(G,\Gamma)$-{\em indistinguishability obfuscation} was proposed. Where $G$ is a set of gates and $\Gamma$ is a set of relations satisfied by the elements of $G.$ In this notion any two circuits over the set of gates $G$ are perfectly indistinguishable if they differ by some sequence of applications of the relations in $\Gamma.$ One of the motivations of their work was to provide a weaker definition of perfectly indistinguishable obfuscation, which is shown to be impossible under certain complexity-theoretic assumptions \cite{AJJ14}. The $(G,\Gamma)$-{\em indistinguishability obfuscation}  appears to be incomparable with the computational indistinguishability obfuscation \cite{BGI+12,GGH+13 }, which is the topic of this paper.
 
-The quantum obfuscation is studied more rigorously in \cite{AF16a}, where the following notions of quantum obfuscation are defined.
+The quantum obfuscation is studied more rigorously in \cite{AF16arxiv}, where the following notions of quantum obfuscation are defined.
 \begin{enumerate}
 \item Quantum black-box obfuscation.
 \item Quantum information-theoretic black-box obfuscation.
@@ -28,22 +27,12 @@ The quantum obfuscation is studied more rigorously in \cite{AF16a}, where the fo
 \item Quantum Best-Possible obfuscation (perfect, statistical, computational).
 \end{enumerate}
 
- The main contribution of their work was to extend the classical impossibility results to the quantum settings such as a generic transformation of quantum circuits into black-box-obfuscated quantum circuits is impossible \cite{AF16arxiv},  statistical indistinguishability obfuscation is impossible, up to an unlikely complexity-theoretic collapse \cite{AF16arxiv}. However, no concrete instantiation was provided in their paper for any of type quantum obfuscations. They also discussed a number of applications of quantum black-box obfuscation such as CPA-secure quantum encryption, quantum fully-homomorphic encryption, and public-key quantum money, however it is not clear what impact these impossibility results have on these applications. They also showed that an existence of a computational quantum indistinguishability obfuscation would imply a witness encryption scheme for all languages in QMA \cite{arXiv:1602.01771v1}.
+ The main contribution of their work was to extend the classical impossibility results to the quantum settings such as a generic transformation of quantum circuits into black-box-obfuscated quantum circuits is impossible \cite{AF16arxiv},  statistical indistinguishability obfuscation is impossible, up to an unlikely complexity-theoretic collapse \cite{AF16arxiv}. However, no concrete instantiation was provided in their paper for any of type quantum obfuscations. They also discussed a number of applications of quantum black-box obfuscation such as CPA-secure quantum encryption, quantum fully-homomorphic encryption, and public-key quantum money, however it is not clear what impact these impossibility results have on these applications. They also showed that an existence of a computational quantum indistinguishability obfuscation would imply a witness encryption scheme for all languages in QMA \cite{AF16arxiv}.
 
 
 \subsection{Our Results}
-In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aaronson and Gottesman~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \ref{update function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$-gates are in $O(\log(n)).$
+In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aaronson and Gottesman~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \ref{update function}). Using the second technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$-gates are logarithmic in the size of the circuit.
 
-
-
-
-
-
-%Quantum indistinguishability  for the encryption of quantum messages was first defined in~\cite{BJ15}, and was shown to be equivalent to quantum semantic security~\cite{ABF+16}. In terms of concrete schemes, \cite{BJ15} showed... while, \cite{ABF+16} showed...
-%In contrast, our contribution using $i\mathcal{O}$ shows.....
-
-%To the best of our knowledge, our second contribution is the first that describes how to achieve $i\mathcal{O}$ for some families of quantum circuits
-%(however, as noted above, the Clifford canonical form is well-known, and its extension to $i\mathcal{O}$ (see Section~\ref{sec:Clifford-$i\mathcal{O}$-canonical}) is relatively straightforward.
 
 
 \subsubsection{Cliffords} TODO: place somewhere 
@@ -76,5 +65,5 @@ applications of gate-teleportation based quantum $i\mathcal{O}$ (for instance, t
 
 
 \subsection*{Outline}
-In section \ref{sec:QiO-Cliffords and more} we provide a new definition of quantum indistinguishability obfuscation. We provide two methodologies for constructing a quantum indistinguishability obfuscation for Clifford circuits. One is based on canonical form of Clifford circuits  while other is based on the principle of gate teleportation.  The construction based on canonical form requires no computational assumptions and is in fact perfectly indistinguishability obfuscation (information theoratically secure), where as the gate teleportation based construction assumes the existence of a quantum secure classical $i\mathcal{O}.$ In section \ref{QiO:Clifford+T:family} we show how to a construct quantum indistinguishability obfuscation from gate teleportation and $i\mathcal{O}$ for any reversible quantum circuit that has at most logarithmic $\tgate$-gates.
+In section \ref{sec:QiO-Cliffords and more} we provide a new definition of quantum indistinguishability obfuscation. In section \ref{QiO:Clifford-Circuits} we show how to construct a quantum indistinguishability obfuscation for Clifford using canonical form. In section \ref{sec:Clifford-iO-teleportaion} we construct quantum indistinguishability obfuscation for Clifford using principle of gate teleportation and quantum secure $i\mathcal{O}.$ In section \ref{QiO:Clifford+T:family} we show how to a construct quantum indistinguishability obfuscation from gate teleportation and $i\mathcal{O}$ for any quantum circuit that has at most logarithmic $\tgate$-gates.
 
