--- a/intro.tex
+++ b/intro.tex
@@ -19,9 +19,9 @@ In this work, we continue the study of computational indistinguishable obfuscati
 
 \subsection{Obfuscation in a Quantum World}
 The quantum obfuscation was first studied in \cite{AJJ14}, where a new notion called
-$(G,\Gamma)$-{\em indistinguishability obfuscation} was proposed. Where $G$ is a set of gates and $\Gamma$ is a set of relations satisfied by the elements of $G.$ In this notion any two circuits over the set of gates $G$ are perfectly indistinguishable if they differ by some sequence of applications of the relations in $\Gamma.$ One of the motivations of their work was to provide a weaker definition of perfectly indistinguishable obfuscation, which is shown to be impossible under certain complexity-theoretic assumptions \cite{AJJ14}. However, $(G,\Gamma)$-{\em indistinguishability obfuscation}  appears to be incomparable with the computational indistinguishability obfuscation \cite{BGI+12,GGH+13 }, which is the topic of this paper.
+$(G,\Gamma)$-{\em indistinguishability obfuscation} was proposed. Where $G$ is a set of gates and $\Gamma$ is a set of relations satisfied by the elements of $G.$ In this notion any two circuits over the set of gates $G$ are perfectly indistinguishable if they differ by some sequence of applications of the relations in $\Gamma.$ One of the motivations of their work was to provide a weaker definition of perfectly indistinguishable obfuscation, which is shown to be impossible under certain complexity-theoretic assumptions \cite{AJJ14}. However, $(G,\Gamma)$-{\em indistinguishability obfuscation}  appears to be incomparable with the computational indistinguishability obfuscation \cite{BGI+12, GGH+13}, which is the topic of this paper.
 
-The quantum obfuscation is studied more rigorously in \cite{AF16a}, where the following notions of quantum obfuscation are defined.
+The quantum obfuscation is studied more rigorously in \cite{AF16arxiv}, where the following notions of quantum obfuscation are defined.
 \begin{enumerate}
 \item Quantum black-box obfuscation.
 \item Quantum information-theoretic black-box obfuscation.
@@ -29,7 +29,7 @@ The quantum obfuscation is studied more rigorously in \cite{AF16a}, where the fo
 \item Quantum Best-Possible obfuscation (perfect, statistical, computational).
 \end{enumerate}
 
- The main contribution of their work was to extend the classical impossibility results to the quantum settings such as a generic transformation of quantum circuits into black-box-obfuscated quantum circuits is impossible \cite{AF16arxiv},  statistical indistinguishability obfuscation is impossible, up to an unlikely complexity-theoretic collapse \cite{AF16arxiv}. However, no concrete instantiation was provided in their paper for any of type quantum obfuscations. They also discussed a number of applications of quantum black-box obfuscation such as CPA-secure quantum encryption, quantum fully-homomorphic encryption, and public-key quantum money, however it is not clear what impact these impossibility results have on these applications. They also showed that an existence of a computational quantum indistinguishability obfuscation would imply a witness encryption scheme for all languages in QMA \cite{arXiv:1602.01771v1}.
+ The main contribution of their work was to extend the classical impossibility results to the quantum settings such as a generic transformation of quantum circuits into black-box-obfuscated quantum circuits is impossible \cite{AF16arxiv},  statistical indistinguishability obfuscation is impossible, up to an unlikely complexity-theoretic collapse \cite{AF16arxiv}. However, no concrete instantiation was provided in their paper for any of type quantum obfuscations. They also discussed a number of applications of quantum black-box obfuscation such as CPA-secure quantum encryption, quantum fully-homomorphic encryption, and public-key quantum money, however it is not clear what impact these impossibility results have on these applications. They also showed that an existence of a computational quantum indistinguishability obfuscation would imply a witness encryption scheme for all languages in QMA  \cite{AF16arxiv}.
 
 
 \subsection{Our Results}
