--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -564,4 +564,4 @@ The $Qi\mathcal{O}$ construction and proof of its security is identical to the t
 
 
 
-%\Anne{TODO: use package cleveref (ie. use \cref instead of \ref)}
+\Anne{TODO: use package cleveref}
