--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@ This material is based upon work supported by the Air Force Office of Scientific
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \bibliographystyle{bst/alphaarxiv}
-\bibliography{bib/quantum}
+\bibliography{bib/full,bib/quantum}
 %\bibliography{bib/full.bib/quantum.bib}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
