--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -48,10 +48,8 @@ Where $k=|C_{q_1}|=|C_{q_2}|.$
 
 \subsubsection{$Qi\mathcal{O}$ for Clifford via Canonical Form}
 \label{sec:Clifford-iO-canonical}
-Aaronson and Gottesman invented a polynomial-quantum algorithm (polynomial size circuit) that takes a Clifford circuit $C_q$ and output its canonical form $C_q^\prime$  ~\cite{AG04} (section VI). This canonical form is invariant for any two equivalent circuits. The Moreover the size of $C_q^\prime$ is in $poly(|C_q|).$ Therefore, the $Qi\mathcal{O}$ is a quantum algorithm that takes a Clifford circuit $C_q,$ as an input and outputs
-														$$(\rho, C_q^\prime)\leftarrow Qi\mathcal{O}(C_q),$$
-
-where $\rho$ is an empty register and $C_q^\prime$ is a canonical form of $C_q$ computed using the Aaronson and Gottesman algorithm.
+Aaronson and Gottesman invented a polynomial-quantum algorithm (polynomial size circuit) that takes a Clifford circuit $C_q$ and output its canonical form ~\cite{AG04} (section VI). This canonical form is invariant for any two equivalent circuits. Moreover the size of the canonical form remain $poly(|C_q|).$ Therefore, the $Qi\mathcal{O}$ in essentially the Aaronson and Gottesman algorithm that takes a Clifford circuit $C_q,$ as an input and output its canonical form $C_q^\prime$ and an empty register $\rho$ \footnote{Note we output the empty register to satisfy the definition of quantum indistinguishability obfuscation (\ref{def:QiO}).}
+														$$(\rho, C_q^\prime)\leftarrow Qi\mathcal{O}(C_q).$$
 
  \begin{lemma}
 The above construction (section \ref{sec:Clifford-iO-canonical}) is a Quantum Indistinguishability Obfuscation for Clifford Circuits.
