--- a/intro.tex
+++ b/intro.tex
@@ -4,9 +4,9 @@
 %\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}.}
 At the intuitive level, an \emph{obfuscator} is a probabilistic polynomial-time algorithm that  transforms a circuit $C$ into another circuit $C’$ that has the same functionality as $C$ but does not reveal anything about $C$, except its functionality \emph{i.e.}, anything that can be learned from $C’$ about $C$ can also be learned from a black-box access to the input-output functionality of~$C$. This concept is formalized in terms of \emph{virtual black-box obfuscation}, and was shown~\cite{BGI+12} to be unachievable in general\footnote{The argument consists in a construction of a family of Boolean functions which is inherently unobfuscatable.}. Motivated by this impossibility result, the same work~\cite{BGI+12} proposed a weaker notion called \emph{indistinguishability obfuscation} ($i\mathcal{O}$).
 
-An $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit~$C$ as an input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs~$x$ and the size of $i\mathcal{O}(C)$ is at most polynomial in the size $C$. Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable, \emph{i.e.}, $iO(C_1)\sim^c iO(C_2)$ \Anne{I suggest to remove this notation, it does not add anything to the text at this point.}. The $i\mathcal{O}$ achieves the notion of \emph{best possible obfuscation}, which states that any information that is not hidden by the obfuscated circuit is also not hidden by any other similar size circuit computing the same functionality~\cite{GR14}. The indistinguishability obfuscation is a very powerful cryptographic tool which that has been shown to enable, among others: digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15}\Anne{zero-knowledge proofs?}.
+An $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit~$C$ as an input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs~$x$ and the size of $i\mathcal{O}(C)$ is at most polynomial in the size $C$. Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable. The $i\mathcal{O}$ achieves the notion of \emph{best possible obfuscation}, which states that any information that is not hidden by the obfuscated circuit is also not hidden by any other similar size circuit computing the same functionality~\cite{GR14}. The indistinguishability obfuscation is a very powerful cryptographic tool which that has been shown to enable, among others: digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15}\Anne{zero-knowledge proofs?}.
 
-The first candidate construction of $i\mathcal{O}$ was published in~\cite{GGH+13}, whose security relied on the presumed hardness of multilinear maps~\cite{CLT13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on some multilinear maps~\cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme has been proposed under the some different assumptions \cite{AJL+19}. \Anne{Whether or not this scheme is resistant against quantum attacks remains to be determined.}% However, It is too premature to say anything about the quantum security of this new construction \cite{AJL+19}.
+The first candidate construction of $i\mathcal{O}$ was published in~\cite{GGH+13}, whose security relied on the presumed hardness of multilinear maps~\cite{CLT13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on some multilinear maps~\cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme has been proposed under the some different assumptions \cite{AJL+19}. Whether or not this scheme is resistant against quantum attacks remains to be determined.
 
 \Anne{Before saying that we ``continue'' work on quantum iO, say what has been done before (if too long, can refer to Section\ref{sec:obf-quantum}}. In this work, we continue the study of computational indistinguishable obfuscation in the quantum world. Our main contribution is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base construction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
 
